# fe-forum-kma

./: .env  .gitignore  CHATBOT_INTEGRATION.md  README.md  copy-lib.sh  index.html  nlu.txt  package-lock.json  package.json  tailwind.config.cjs  tsconfig.json  vite.config.ts
src/: i18n.ts  main.tsx  vite-env.d.ts
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs
src/api/: api.service.ts  axios.ts  endpoints.ts  index.ts
src/common/: FileUpload.tsx  WebSocketManager.tsx  index.ts
src/components/ui/: button.tsx  dropdown-menu.tsx  input.tsx  menubar.tsx  select.tsx  toast.tsx  use-toast.ts
src/features/admin/: index.ts
src/features/auth/: index.ts
src/features/chat/: index.ts
src/features/chatbot/: index.ts
src/features/comments/: index.ts
src/features/friends/: index.ts
src/features/groups/: index.ts
src/features/notifications/: Notifications.tsx  index.ts
src/features/posts/: index.ts
src/features/profile/: index.ts
src/features/reactions/: index.ts
src/interfaces/: auth.types.ts  chat.types.ts  chatbot.types.ts  file.types.ts  friendship.types.ts  group.types.ts  index.ts  notification.types.ts  post.types.ts
src/layouts/: AdminLayout.tsx  AppLayout.tsx  MainAppLayout.tsx  index.ts
src/layouts/forum/: ForumHeader.tsx  MainForum.tsx  SearchDropdown.tsx  Sidebar.tsx  (+1 more)
src/lib/: date.utils.ts  file-upload.service.ts  index.ts  utils.ts
src/locales/: en.json  vi.json
src/pages/: AdminDashboard.tsx  index.ts
src/routes/: AppRouter.tsx
src/store/: useStore.ts
src/styles/: globals.css  tailwind.css
(+89 files in other folders)
